@@ -13,6 +13,8 @@
 	* src/eval.c docs/gnuplot.doc: Allow "strcol(foo)" as shorthand form
 	of "stringcolumn(foo)".
 
+	* src/unset.c (unset_style): Add missing command "unset style line <n>".
+
 2007-02-22  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>
 
 	* term/latex.trm (LATEX_fillbox): Add support for solid-fill boxes.
